# polymarket-soccer-bot

./: .env.example  .gitignore  Dockerfile  approve_contracts.py  docker-compose.yml  generate_keys.py  market_data.py  program.md  pyproject.toml  resolution.py  run.py  sandbox.py  trade.py
tests/: test_core.py
